Fixed header and styling fixes on mobile and desktop

--- a/css/app.css
+++ b/css/app.css
@@ -245,7 +245,7 @@ a {
 
 #menu-bar {
 	width: 100%;
-	height: 55px;
+	height: 70px;
 	position: fixed;
 	/* background-color: #fff; */
 	top: 0;
@@ -255,10 +255,14 @@ a {
 	z-index: 2;
 	transition-property: background-color;
 	transition-duration: 200ms;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 20px;
 }
 @media screen and (max-width: 768px) {
 	#menu-bar {
-		height: 40px;
+		height: 70px;
 	}
 }
 
@@ -277,13 +281,9 @@ a {
 } */
 
 #contact {
-	position: fixed;
-	top: 16px;
-	right: 25px;
-	transform-origin: right top;
-	color: #333;
-	font-size: 0.88889rem;
-	z-index: 2;
+	display: inherit;
+	position: relative;
+	z-index: 3;
 }
 @media screen and (max-width: 768px) {
 	#contact {
@@ -338,14 +338,10 @@ a {
 }
 
 #logo {
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 35px;
 	font-weight: 600;
 	color: #000;
 	font-family: "Libre Franklin", sans-serif;
-	font-size: 20px;
+	font-size: 28px;
 	line-height: 100%;
 }
 
@@ -667,22 +663,28 @@ body {
 
 /* galler slide */
 .swiper-slide.work {
-	width: 30%;
+	width: 25%;
 	background: #eee;
 	transition-property: background-color;
 	transition-duration: 700ms;
 	transition-timing-function: ease;
 }
+@media (min-width: 1200px) and (max-width: 1599px) {
+	.swiper-slide.work {
+		width: 35%;
+	}
+}
 @media screen and (max-width: 768px) {
 	.swiper-slide.work {
 		transition-timing-function: linear;
 		transition-duration: 300ms;
+		width: 100%;
 	}
 }
 .swiper-slide.work .inner {
 	width: 100%;
 	position: absolute;
-	top: 50%;
+	top: 55%;
 	left: 50%;
 	padding-left: 50px;
 	transform: translate3d(-50%, -50%, 0);
@@ -693,8 +695,8 @@ body {
 }
 @media screen and (max-width: 768px) {
 	.swiper-slide.work .inner {
-		padding-left: 0;
-		width: 70%;
+		padding-left: 30px;
+		width: 100%;
 	}
 }
 .swiper-slide.work .inner a {
@@ -1028,19 +1030,30 @@ body {
 .swiper-slide.service {
 	width: 60%;
 	min-width: 500px;
-	padding: 0 95px;
+	padding: 120px 95px 0;
 	border-left: 1px solid #ddd;
+}
+@media screen and (max-width: 1024px) {
+	.swiper-slide.service {
+		padding: 80px 55px 0;
+		width: 100%;
+	}
 }
 @media screen and (max-width: 768px) {
 	.swiper-slide.service {
-		padding: 0 55px;
-		width: 100%;
+		padding: 80px 55px 0;
+		width: 90%;
 	}
 }
 .swiper-slide.service .inner {
 	position: relative;
 	top: 90px;
 	/* transform: translate3d(0, -50%, 0); */
+}
+@media (max-width: 767px) {
+	.swiper-slide.service .inner {
+		width: 80%;
+	}
 }
 .swiper-slide.service .inner .icon {
 	width: 150px;
@@ -1510,13 +1523,13 @@ section.blog-post .comment_form form input.button {
 
 @media screen and (max-height: 700px) and (max-width: 1023px) {
 	.swiper-slide.work {
-		width: 100%;
+		width: 50%;
 	}
 }
 
 @media screen and (max-height: 700px) {
 	.swiper-slide.work .inner {
-		top: 46%;
+		top: 55%;
 	}
 	.swiper-slide.work .inner p.meta {
 		display: none;
@@ -1524,7 +1537,7 @@ section.blog-post .comment_form form input.button {
 	.swiper-slide.work .inner a img,
 	.swiper-slide.work .inner a video {
 		width: auto;
-		max-height: 300px;
+		max-height: 500px;
 	}
 	.swiper-slide.work .inner h2 {
 		font-size: 1.42383rem;
@@ -1868,9 +1881,18 @@ section.blog-post .comment_form form input.button {
 .inner-top {
 	position: fixed;
 	top: 0;
-	left: 475px;
-	z-index: 9;
-	padding-left: 95px;
+	left: 0;
+	z-index: 1;
+	padding-left: 0;
+	text-align: center;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 70px;
+}
+.inner-top h2 {
+	margin: 0;
 }
 .small-text {
 	color: #999;
